--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Hello World</h1>
     <h2>Goodbye World</h2>
+    <button>New button</button>
 </body>
 <script src="/script.js"></script>
 </html>
